--- a/example.env
+++ b/example.env
@@ -1,9 +1,10 @@
 PERSIST_DIRECTORY=db
 MODEL_TYPE=LlamaCpp
-MODEL_PATH=models/ggml-gpt4all-j-v1.3-groovy.bin
+MODEL_PATH=models/ggml-model-q4_0.bin
 EMBEDDINGS_MODEL_NAME=paraphrase-TinyBERT-L6-v2
 MODEL_N_CTX=1000
 MODEL_N_BATCH=8
 TARGET_SOURCE_CHUNKS=4
 othermodeltype=LlamaCpp-GPT4All
 otherembedding=all-MiniLM-L6-v2-paraphrase-TinyBERT-L6-v2
+othermodelpaths=ggml-gpt4all-j-v1.3-groovy.bin-ggml-model-q4_0.bin
