--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 PERSIST_DIRECTORY=db
-MODEL_TYPE=LlamaCpp
+MODEL_TYPE=GPT4All
 MODEL_PATH=models/ggml-model-q4_0.bin
 EMBEDDINGS_MODEL_NAME=paraphrase-TinyBERT-L6-v2
 MODEL_N_CTX=1000
